--- a/app/site/index.html
+++ b/app/site/index.html
@@ -1,8 +1,10 @@
-<html>
-	<title>Jordan's Amazing Blog</title>
+{% extends "layout.html" %}
+{% block content %}
+	{% for post in posts %}
+		<div class = "col-md-6">
+			<h1>{{post.author}}</h1>
+			<h4>{{post.text}}</h4>
+		</div>
+	{% endfor %}
 
-	<body>
-		<h4>Hello World!</h4>
-	</body>
-
-</html>
+{% endblock content  %}
